chore: add nuxt 4 support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
     "moduleResolution": "node",
-    "module": "ESNext"
+    "module": "ESNext",
+    "types": [
+      "node"
+    ]
   }
 }
